# jakubarbet.me

./: .env.example  .gitignore  .prettierrc  LICENSE  LICENSE.md  README.md  astro.config.mjs  atom.xml  bun.lockb  deploy.sh  fetchGalleries.ts  flake.nix  index.html  manifest.json  overlay.nix  package-lock.json  package.json  photos.ts  pnpm-lock.yaml  pubkey.txt  rss.xml  sitemap.xml  tailwind.config.js  tailwind.config.mjs  tsconfig.json
.github/workflows/: deploy.yml
2019-06-19-how-to-increase-your-security-on-the-internet/: index.html
about/: index.html
assets/css/: style.css
blog/: index.html
buildtools/css/: node-packages.nix  package-lock.json  package.json
buildtools/hakyll/: buildtools-hakyll.cabal
buildtools/hakyll/src/: Main.hs
hakyll-gen/: hakyll-gen.cabal
hakyll-gen/src/: Main.hs
projects/: index.html
src/: about.md  index.html  manifest.json  projects.html
src/assets/css/: style.css
src/components/: ArrowLeft.astro  ArrowRight.astro  Experience.astro  ExternalLink.astro  Footer.astro  ImageWithPlaceholder.astro  Prose.astro  Section.astro  Skill.astro  Skills.astro
src/content/: config.ts
src/layouts/: BaseLayout.astro  Layout.astro  base.css
src/pages/: cv.astro  gpg.astro  index.astro  photography.astro  writing.astro
src/pages/gallery/: [...slug].astro  [slug].astro
src/posts/: 2019-06-19-how-to-increase-your-security-on-the-internet.md
src/styles/: global.css
src/templates/: default.html  post-list.html  post.html  sitemap.xml
src/utils/: albums.ts  galleries.ts
