name:               buildtools-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable buildtools-hakyll
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.14.*
                  , filepath == 1.4.*
                  , process == 1.6.*
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
